# finAssistant_mcphost

./: .env.example  .gitignore  README.md  pyproject.toml
src/: config.py
src/api/: chat.py
src/host/: connection_manager.py  host.py
